# mylang-playground

./: .gitmodules  0-AI-MANIFEST.a2ml  ARCHITECTURE.adoc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ECOSYSTEM.scm  Justfile  Mustfile  README.adoc  ROADMAP.adoc  STATE.scm  config.ncl  justfile  mustfile.toml
hives/me/: .editorconfig  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  MAINTAINERS.md  PROJECT_STATUS.md  README.adoc  RSR_COMPLIANCE.md  SECURITY.md  justfile
hives/me/.github/workflows/: ci.yml  codeql.yml  rsr-antipattern.yml
hives/me/crates/affine/: Cargo.toml
hives/me/crates/ast/: Cargo.toml
hives/me/crates/codegen/: Cargo.toml
hives/me/crates/duet/: Cargo.toml
hives/me/crates/ensemble/: Cargo.toml
hives/me/crates/lexer/: Cargo.toml
hives/me/crates/lsp/: Cargo.toml
hives/me/crates/parser/: Cargo.toml
hives/me/crates/repl/: Cargo.toml
hives/me/crates/runtime/: Cargo.toml
hives/me/crates/typechecker/: Cargo.toml
hives/me/docs/: CITATIONS.adoc
hives/me/docs/research/: PAPER_OUTLINES.md
hives/me/docs/specs/: DUET_GRAMMAR.ebnf  ENSEMBLE_GRAMMAR_VARIANT_A.ebnf  ENSEMBLE_GRAMMAR_VARIANT_B.ebnf  LANGUAGE_SPECIFICATION.md  SOLO_GRAMMAR.ebnf
hives/me/docs/tutorials/: GETTING_STARTED.md
hives/me/examples/duet/: 01_synthesis_basic.duet  02_verification.duet  03_intent.duet  04_ai_optimize.duet  05_hybrid_reasoning.duet  06_neural_functions.duet  07_example.duet  08_example.duet  09_example.duet  10_example.duet  11_example.duet  12_example.duet  (+23 more)
hives/me/scripts/: verify-rsr.sh
hives/me/src/: main.rs
(+143 files in other folders)
