[package]
name = "my-lang"
version = "0.1.0"
edition = "2021"
authors = ["My Language Project"]
description = "Compiler and runtime for the My Language family (Me, Solo, Duet, Ensemble)"
license = "MIT"
repository = "https://github.com/Hyperpolymath/me-dialect-playground"

[workspace]
members = [
    "crates/lexer",
    "crates/parser",
    "crates/ast",
    "crates/typechecker",
    "crates/affine",
    "crates/codegen",
    "crates/runtime",
    "crates/duet",
    "crates/ensemble",
    "crates/lsp",
    "crates/repl",
]

[dependencies]
my-lang-lexer = { path = "crates/lexer" }
my-lang-parser = { path = "crates/parser" }
my-lang-ast = { path = "crates/ast" }
my-lang-typechecker = { path = "crates/typechecker" }
my-lang-affine = { path = "crates/affine" }
my-lang-codegen = { path = "crates/codegen" }
my-lang-runtime = { path = "crates/runtime" }
my-lang-duet = { path = "crates/duet" }
my-lang-ensemble = { path = "crates/ensemble" }

clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[[bin]]
name = "my-lang"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[features]
default = ["solo", "duet"]
solo = []
duet = ["solo"]
ensemble = ["duet"]
all = ["solo", "duet", "ensemble"]
